@@ -89,11 +89,14 @@ These themes are:
 
 * **basic** -- This is a basically unstyled layout used as the base for the
   other themes, and usable as the base for custom themes as well.  The HTML
-  contains all important elements like sidebar and relation bar.  There is one
-  option (which is inherited by the other themes):
+  contains all important elements like sidebar and relation bar.  There are
+  these options (which are inherited by the other themes):
 
   - **nosidebar** (true or false): Don't include the sidebar.  Defaults to
     false.
+
+  - **sidebarwidth** (an integer): Width of the sidebar in pixels.  (Do not
+    include ``px`` in the value.)  Defaults to 230 pixels.
 
 * **default** -- This is the default theme, which looks like `the Python
   documentation <http://docs.python.org/>`_.  It can be customized via these
@@ -142,7 +145,8 @@ These themes are:
   - **headfont** (CSS font-family): Font for headings.
 
 * **sphinxdoc** -- The theme used for this documentation.  It features a sidebar
-  on the right side.  There are currently no options beyond *nosidebar*.
+  on the right side.  There are currently no options beyond *nosidebar* and
+  *sidebarwidth*.
 
 * **scrolls** -- A more lightweight theme, based on `the Jinja documentation
   <http://jinja.pocoo.org/>`_.  The following color options are available:
@@ -176,10 +180,11 @@ These themes are:
     is ``justify``.
 
 * **nature** -- A greenish theme.  There are currently no options beyond
-  *nosidebar*.
+  *nosidebar* and *sidebarwidth*.
 
 * **pyramid** -- A theme from the Pyramid web framework project, designed by
-  Blaise Laflamme.  THere are currently no options beyond *nosidebar*.
+  Blaise Laflamme.  THere are currently no options beyond *nosidebar* and
+  *sidebarwidth*.
 
 * **haiku** -- A theme without sidebar inspired by the `Haiku OS user guide
   <http://www.haiku-os.org/docs/userguide/en/contents.html>`_.  The following
@@ -193,7 +198,7 @@ These themes are:
     **hoverlinkcolor** (CSS colors): Colors for various body elements.
 
 * **traditional** -- A theme resembling the old Python documentation.  There are
-  currently no options beyond *nosidebar*.
+  currently no options beyond *nosidebar* and *sidebarwidth*.
 
 * **epub** -- A theme for the epub builder.  There are currently no options.
   This theme tries to save visual space which is a sparse resource on ebook
